style.css
*{
    padding:0;
    margin:0;
    box-sizing: border-box;
}

html{
    scroll-behavior: smooth;
}
main{
    min-height: 100vh;
    width: 100%;
    max-width: 100%;
    background-image: linear-gradient(rgba(122, 123, 124, 0), rgba(0, 0, 0, 0.7)), url("img/background7.JPG");
    background-position: center center;
    background-size: cover;
    background-repeat: none;
}
.navBar{
    display:flex; 
    min-height: 50px;
    width: 90%;
    margin:0 auto;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    left: 5%;
    transition: all 0.5s;
}
.navBar a{
    text-decoration: none;
    color: black;
}

.toggle-button{   
    cursor: default;
    display: none;
    position: absolute;
    right:0;
    top: 0;
    border-radius: 5px;
    height: 40px;
    width: 40px;
}




.line{
    display: none;
    width: 80%;
    border-radius: 10px;
    height: 5px;
    background-color: white;
    margin: 3px auto;
    
    background-color: black;
}


.navbar-links{
    display: flex;
    justify-content: space-between;
  }
  .logo{
    font-size:2rem;
    color: black;
 }
 .mouseHoverInLogo{
     transform: scale(1.5);
     transition: 1s;
 }

 .mouseHoverOutLogo{
    color: rgb(0, 0, 0);
    transform: scale(1);
    transition: 1s;
}
  .navbar-links li{
    list-style: none;
    display: inline;
    width: 100%;
    margin: 0 2rem;
    font-size:2rem;
    cursor: pointer;
    
}
.navbar-links li:hover{
background-color: rgba(90, 93, 93, 0.534);
border-radius: 10%;
color: rgb(233, 233, 233);
}


@media screen and (max-width:650px) {

    .toggle-button:hover{
        background-color: rgba(90, 93, 93, 0.534);
        border-radius: 10%;
    }
       .toggle-button{
        display: flex;
        flex-direction: column;
        justify-content: center;
        cursor: pointer;
       
       }
     .navbar-links{
     display: none;
      width: 100%;
     }
     .navBar{
         flex-direction: column;
         align-items: flex-start;
         justify-content: center;
     }
     .navbar-links ul{
         width: 100%;
         flex-direction: column;
     }
     .navbar-links li{
         width: 100%;
         display:block;
         text-align: center;
         margin-bottom:1rem;
     }
     
    .line{
        display: block;  
    }
    .navbar-links.active{
        display:flex;
        color: white;
    }
    
    
    .navbar-links li{
        width: 50%;
        margin: 0 auto;
        font-size:2rem;
    }
    .navbar-links li:hover{
      background-color: rgba(90, 93, 93, 0.534);
      border-radius: 10%;
    }
    .navBar.active{
        background-color: rgba(0, 0, 0, 0.424);
        width: 100%;
    }

    .navBar{
        left: 0;
        width: 100%;
    }
} 

.linkAndText{
    /* background-color: rgba(0, 255, 255, 0.267); */
    width: 100%;
    margin: 0 auto;
    height: 80vh;
    position:absolute;
    top: 0;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: flex-end;
}

/*Text in main, Hey I am Samet and links for social Media*/
.textContainer{
/* background-color: rgb(10, 233, 233); */
margin-right:10%;
}
.welcome{
    color: white;
    font-size:1.5rem;
    width: 100%;

    text-align: center;
    font-family: 'Dancing Script', cursive;
}

.links{
    text-align: center;
    margin-top:1rem;
    width: 100%;
}
.socialMedia{
    width: 50px;
    height: 50px;
}


/*for text*/
@media screen and (min-width:900px) {
    .welcome{
        font-size:3rem;
    }
    .socialMedia{
        width: 70px;
        height: 70px;
    }
 
}
@media screen and (max-width:1030px){
    main{
        background-image: linear-gradient(rgba(122, 123, 124, 0), rgba(0, 0, 0, 0.7)), url("img/resizedjpg.jpg");
    }
    .welcome{
        font-size:1.5rem
    }
    .socialMedia{
        width: 50px;
        height: 50px;
    }
    
  
    
}
@media (max-width:720px) {
  
    .textContainer{
        margin: 0 auto;
    }
    .welcome{
        font-size:2rem;
    }
    .linkAndText{
        align-items: flex-end;
        justify-content: flex-end;
        
    }
}


.links a{
  text-decoration: none;
 
  height: 100%;
  width: 100%;
}





.mouseHoverIn{
    transform:translateY(-10px);
    transition: 1s ease-out;
    fill:white;
}
.mouseHoverOut{
    transform:translateY(0px);
    transition: 1s ease-out;
    fill:rgb(0, 0, 0);
}
.mouseHoverInText{
    transform:translateY(-10px);
    transform: scale(1.1);
    transition: 1s ease-out;
    color:black;
}

.mouseHoverOutText{
    transform:translateY(0px);
    transform: scale(1);
    transition: 1s ease-out;
    color:white;
}


.myInformations{
    background-color: #E9ECEF;
    padding-bottom: 5rem;
}
.textAndImgContainer{
    margin: 0 0;
}

.aboutMe{
    width: 90%;
    border-bottom: 1px solid black;
    text-align: center;
    margin: 0 auto;
    padding-top:2rem;
    font-size:2rem;
    font-family: 'Nunito', sans-serif;
}

.aboutMeContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 90%;
  
    margin: 1rem auto;
}
.myText{
    width: 100%;
    margin-top: 1rem;
    text-align: center;
  
    font-size:1.5rem;
    font-family: 'Source Sans Pro', sans-serif;
}
.myImage{
    width: 20%;
    min-width: 270px;
    border-radius: 44px;
}

@media (min-width:800px) {
    .aboutMeContainer{
        flex-direction: row;
        justify-content: space-evenly;
    
    }
    .myImage{
        width: 25%;
    }
    .myText{
        width: 30%;
    
     
    }
    .textAndImgContainer{
        margin: 0 1rem;
    }
    
}

.projects{
    width: 100%;
    padding-bottom: 10rem;
    background-color: #F8F9FA;
}
.projectsInfo{
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    text-align: center;
    font-size:3rem;
    color: rgb(68, 68, 68);

}
.container{
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center; 
    flex-wrap: wrap;
}
.card{
    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2), -3px -3px 5px rgba(0, 0, 0, 0.2);
    width: 90%;
    border-radius: 20px;;
    min-height: 300px;
    margin-top: 5rem;
    background-color: #FFFFFF;
    
}
.imgContainer{
    width: 100%;
    text-align: center;
}
.projectImage{
width: 10vw;
height: 30%;
min-width: 100px;
min-height: 50px;
border-radius: 90%;


}

.cardImgAndInfo h2{
  text-align: center;
  font-size:2rem;
}

.cardImgAndInfo h4{
    text-align: center;
    font-size:1.2rem;
 }
 .cardGithub{
     display: flex;
     justify-content: space-around;   
 }
 .githubHolder{
     margin-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2), -1px -1px 5px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
 .carGitHubLogo{
     width: 50px;
 }
 .clone{
     margin:0 1rem;
 }
 .language{
     margin-top: 1rem;
     margin-left: 1rem;

     width: 100%;
     height: 8vh;
     font-size:1.2rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }

 @media screen and (min-width:1200px){
    .card{
        width: 40%;    
    }
    .container{
        flex-direction: row;
        justify-content: space-around;
    }

 }


/*card links*/
.cardLinks{
    text-decoration: none;
    color: black;
}

navbar-links
.fix{
    border-radius: 10px;
}
.rotate{
    transform: rotateX(180deg);
    transition: 1s;
    background-color: aqua;
}
.navBarActivate{
    width: 100%;
    left: 0;
    background: rgba(65, 65, 65, 0.8);
    transition: all 0.5s;
    color: white;
}
.navBarActivate a{
    color: white;
}
.navBarActivate a:hover{
    background-color: #e6e6e6a9;
    color: black;
    border-radius: 10%;
}
.navBarActivate .line{
    background-color: white;
}
.fix{
    margin-top:1rem;
    border-radius: 10px;
}
.card2 a{
    text-decoration: none;
    color: black;
}
.card2{
    cursor: pointer;
}

